pie graphs complete

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -12,7 +12,9 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 
   <link rel="stylesheet" href="/css/application.css">
-
+  <script src="/js/graph_tools.js"></script>
+   <script src="/js/d3pie.js"></script>
+  <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
   <script src="/js/application.js"></script>
 
   <title></title>
